--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,24 @@
 {
-    "name": "Example app",
-    "id": "example",
+    "name": "Paperless-ngx",
+    "id": "paperless-ngx",
     "packaging_format": 1,
     "description": {
-        "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
-        "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
+        "en": "Scan, index and archive all your physical documents",
+        "fr": "Scannez, triez et archivez tous vos documents papiers"
     },
-    "version": "1.0~ynh1",
-    "url": "https://example.com",
+    "version": "1.6~ynh1",
+    "url": "https://paperless-ngx.com",
     "upstream": {
-        "license": "free",
-        "website": "https://example.com",
-        "demo": "https://demo.example.com",
-        "admindoc": "https://yunohost.org/packaging_apps",
-        "userdoc": "https://yunohost.org/apps",
-        "code": "https://some.forge.com/example/example"
+        "license": "GPL-v3-or-later",
+        "website": "https://paperless-ngx.com",
+        "demo": "https://demo.paperless-ngx.com/",
+        "admindoc": "https://paperless-ngx.readthedocs.io/en/latest/index.html",
+        "userdoc": "https://paperless-ngx.readthedocs.io/en/latest/usage_overview.html",
+        "code": "https://github.com/paperless-ngx/paperless-ngx"
     },
     "license": "free",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com"
+        "name": "Tagada"
     },
     "requirements": {
         "yunohost": ">= 4.3.0"
@@ -27,8 +26,8 @@
     "multi_instance": true,
     "services": [
         "nginx",
-        "php7.3-fpm",
-        "mysql"
+        "redis",
+        "postgresql"
     ],
     "arguments": {
         "install" : [
@@ -37,37 +36,8 @@
                 "type": "domain"
             },
             {
-                "name": "path",
-                "type": "path",
-                "example": "/example",
-                "default": "/example"
-            },
-            {
-                "name": "is_public",
-                "type": "boolean",
-                "default": true
-            },
-            {
-                "name": "language",
-                "type": "string",
-                "ask": {
-                    "en": "Choose the application language",
-                    "fr": "Choisissez la langue de l'application"
-                },
-                "choices": ["fr", "en"],
-                "default": "fr"
-            },
-            {
                 "name": "admin",
                 "type": "user"
-            },
-            {
-                "name": "password",
-                "type": "password",
-                "help": {
-                    "en": "Use the help field to add an information for the admin about this question.",
-                    "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
-                }
             }
         ]
     }
