--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,6 +13,8 @@ location __PATH__/ {
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Host $server_name;
 
+  client_max_body_size 25M;
+
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
 }
