--- a/conf/paperless.conf.example
+++ b/conf/paperless.conf.example
@@ -3,11 +3,11 @@
 
 # Debug. Only enable this for development.
 
-#PAPERLESS_DEBUG=false
+PAPERLESS_DEBUG=false
 
 # Required services
 
-PAPERLESS_REDIS=redis://localhost:6379
+PAPERLESS_REDIS=redis://localhost:6379/__REDIS_DB__
 
 PAPERLESS_DBHOST=localhost
 PAPERLESS_DBPORT=5432
@@ -18,15 +18,17 @@ PAPERLESS_DBPASS=__DB_PWD__
 
 # Paths and folders
 
-PAPERLESS_CONSUMPTION_DIR=__DATA_DIR__/consume
-PAPERLESS_DATA_DIR=__DATA_DIR__/data
+PAPERLESS_SCRATCH_DIR=/tmp/__APP__
+PAPERLESS_CONSUMPTION_DIR=__DATADIR__/consume
+PAPERLESS_DATA_DIR=__DATADIR__/data
 #PAPERLESS_TRASH_DIR=
-PAPERLESS_MEDIA_ROOT=__DATA_DIR__/media
+PAPERLESS_MEDIA_ROOT=__DATADIR__/media
 #PAPERLESS_STATICDIR=../static
 #PAPERLESS_FILENAME_FORMAT=
 
 # Security and hosting
 
+PAPERLESS_URL=https://__DOMAIN__
 PAPERLESS_SECRET_KEY=__PAPERLESS_SECRET_KEY__
 PAPERLESS_ALLOWED_HOSTS=__DOMAIN__
 PAPERLESS_CORS_ALLOWED_HOSTS=https://__DOMAIN__
@@ -38,7 +40,7 @@ PAPERLESS_CORS_ALLOWED_HOSTS=https://__DOMAIN__
 
 # OCR settings
 
-PAPERLESS_OCR_LANGUAGE=eng+fra
+PAPERLESS_OCR_LANGUAGE=eng
 #PAPERLESS_OCR_MODE=skip
 #PAPERLESS_OCR_OUTPUT_TYPE=pdfa
 #PAPERLESS_OCR_PAGES=1
@@ -84,4 +86,3 @@ PAPERLESS_CONSUMER_IGNORE_PATTERNS=[".DS_STORE/*", "._*", ".stfolder/*", ".*"]
 # YunoHost tweaks
 
 PAPERLESS_LOGOUT_REDIRECT_URL=https://__MAIN_DOMAIN__/yunohost/sso/?action=logout
-PAPERLESS_PORT=__PORT__
