--- a/conf/systemd-task-queue.service
+++ b/conf/systemd-task-queue.service
@@ -1,7 +1,5 @@
 [Unit]
-Description=Paperless webserver
-After=network.target
-Wants=network.target
+Description=Paperless task-queue
 Requires=redis.service
 
 [Service]
@@ -9,8 +7,8 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/src/
-ExecStart=__FINALPATH__/venv/bin/uvicorn --port=__PORT__ --log-level=warning paperless.asgi:application
-StandardOutput=append:/var/log/__APP__/__APP__.log
+ExecStart=__FINALPATH__/venv/bin/celery --app paperless worker --loglevel INFO
+StandardOutput=append:/var/log/__APP__/__APP__-task-queue.log
 StandardError=inherit
 
 # Sandboxing options to harden security
