--- a/conf/paperless.conf.example
+++ b/conf/paperless.conf.example
@@ -25,6 +25,7 @@ PAPERLESS_DATA_DIR=__DATADIR__/data
 PAPERLESS_MEDIA_ROOT=__DATADIR__/media
 #PAPERLESS_STATICDIR=../static
 #PAPERLESS_FILENAME_FORMAT=
+PAPERLESS_NLTK_DIR=__FINALPATH_/nltk_data
 
 # Security and hosting
 
