--- a/config_panel.toml
+++ b/config_panel.toml
@@ -13,7 +13,7 @@ name = "Paperless-ngx configuration"
 		type = "string"
 		default = "eng"
 		help = """\
-Read this informations: https://github.com/YunoHost-Apps/paperless-ngx_ynh#disclaimers--important-information\n\
+Read this informations: https://github.com/YunoHost-Apps/paperless-ngx_ynh/tree/master/doc/PRE_INSTALL.md\n\
 If your language contains a '-' such as chi-sim, you must use chi_sim\n\
 Examples:\n- eng\n- eng+fra\n- eng+fra+chi_sim"""
-		bind = "PAPERLESS_OCR_LANGUAGE:/opt/yunohost/__APP__/paperless.conf"
+		bind = "PAPERLESS_OCR_LANGUAGE:__INSTALL_DIR__/paperless.conf"
