Include built gs in Environment

--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,6 +8,7 @@ Requires=redis.service
 Type=simple
 User=__APP__
 Group=__APP__
+Environment=PATH=__LOCAL_PATH__
 WorkingDirectory=__INSTALL_DIR__/src/
 ExecStart=__INSTALL_DIR__/venv/bin/uvicorn --port=__PORT__ --log-level=warning paperless.asgi:application
 StandardOutput=append:/var/log/__APP__/__APP__.log
