--- a/conf/systemd-consumer.service
+++ b/conf/systemd-consumer.service
@@ -6,6 +6,7 @@ Requires=redis.service
 Type=simple
 User=__APP__
 Group=__APP__
+Environment=PATH=__LOCAL_PATH__
 WorkingDirectory=__INSTALL_DIR__/src/
 ExecStart=__INSTALL_DIR__/venv/bin/python3 manage.py document_consumer
 StandardOutput=append:/var/log/__APP__/__APP__-consumer.log
