--- a/conf/systemd-scheduler.service
+++ b/conf/systemd-scheduler.service
@@ -6,6 +6,7 @@ Requires=redis.service
 Type=simple
 User=__APP__
 Group=__APP__
+Environment=PATH=__LOCAL_PATH__
 WorkingDirectory=__INSTALL_DIR__/src/
 ExecStart=__INSTALL_DIR__/venv/bin/celery --app paperless beat --loglevel INFO
 StandardOutput=append:/var/log/__APP__/__APP__-scheduler.log
