--- a/tests.toml
+++ b/tests.toml
@@ -6,7 +6,7 @@ test_format = 1.0
     # Tests to run
     # ------------
 
-    exclude = ["install.subdir"] 
+    exclude = ["install.subdir"]
     
     # -------------------------------
     # Default args to use for install
@@ -24,4 +24,4 @@ test_format = 1.0
     # Commits to test upgrade from
     # -------------------------------
 
-    test_upgrade_from.8236072.name = "Upgrade from 1.14.5~ynh1 (v1)"
+    #test_upgrade_from.8236072.name = "Upgrade from 1.14.5~ynh1 (v1)"
