--- a/tests.toml
+++ b/tests.toml
@@ -1,3 +1,5 @@
+#:schema https://raw.githubusercontent.com/YunoHost/apps/master/schemas/tests.v1.schema.json
+
 test_format = 1.0
 
 [default]
@@ -11,7 +13,7 @@ test_format = 1.0
     # -------------------------------
     # Default args to use for install
     # -------------------------------
-    
+   
     # By default, the CI will automagically fill the 'standard' args
     # such as domain, path, admin, is_public and password with relevant values
     # and also install args with a "default" provided in the manifest..
@@ -24,4 +26,4 @@ test_format = 1.0
     # Commits to test upgrade from
     # -------------------------------
 
-    #test_upgrade_from.8236072.name = "Upgrade from 1.14.5~ynh1 (v1)"
+    #test_upgrade_from.8236072fe28faeffdc8cfc7648d1c8b76a760abd.name = "Upgrade from 1.14.5~ynh1 (v1)"
