--- a/tests.toml
+++ b/tests.toml
@@ -7,7 +7,7 @@ test_format = 1.0
     # ------------
 
     exclude = ["install.subdir"]
-    
+
     # -------------------------------
     # Default args to use for install
     # -------------------------------
@@ -25,3 +25,4 @@ test_format = 1.0
     # -------------------------------
 
     #test_upgrade_from.8236072.name = "Upgrade from 1.14.5~ynh1 (v1)"
+    test_upgrade_from.ada997b121bbcdf2b70467f4e5484cd19d4ca65f.name = "Upgrade from 2.14.7~ynh1"
