--- a/tests.toml
+++ b/tests.toml
@@ -1,3 +1,5 @@
+#:schema https://raw.githubusercontent.com/YunoHost/apps/master/schemas/tests.v1.schema.json
+
 test_format = 1.0
 
 [default]
@@ -11,11 +13,6 @@ test_format = 1.0
     # -------------------------------
     # Default args to use for install
     # -------------------------------
-    
-    # By default, the CI will automagically fill the 'standard' args
-    # such as domain, path, admin, is_public and password with relevant values
-    # and also install args with a "default" provided in the manifest..
-    # It should only make sense to declare custom args here for args with no default values
 
     args.admin_pw = "acab"
     args.init_main_permission = "all_users"
