enh: allow the app to send emails

--- a/conf/paperless.conf.example
+++ b/conf/paperless.conf.example
@@ -84,6 +84,16 @@ PAPERLESS_CONSUMER_IGNORE_PATTERNS=[".DS_STORE/*", "._*", ".stfolder/*", ".*"]
 PAPERLESS_GS_BINARY=__INSTALL_DIR__/bin/gs
 #PAPERLESS_OPTIPNG_BINARY=/usr/bin/optipng
 
+# Email sending
+
+PAPERLESS_EMAIL_HOST=localhost
+PAPERLESS_EMAIL_PORT=25
+PAPERLESS_EMAIL_HOST_USER=__APP__
+PAPERLESS_EMAIL_FROM=__APP__@__DOMAIN__
+PAPERLESS_EMAIL_HOST_PASSWORD=__MAIL_PWD__
+PAPERLESS_EMAIL_USE_TLS=false
+PAPERLESS_EMAIL_USE_SSL=false
+
 # YunoHost tweaks
 
 PAPERLESS_LOGOUT_REDIRECT_URL=https://__MAIN_DOMAIN__/yunohost/sso/?action=logout
